<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">


    <WebView
        android:id="@+id/webview"
        android:layout_width="1sp"
        android:layout_height="1sp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/text_progressBar_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/button_try_gps_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:onClick="prepareLocation"
                android:text="Try again" />

            <Button
                android:id="@+id/button_manually_pick_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:onClick="manuallyPickLocation"
                android:text="Manually pick location" />

            <Button
                android:id="@+id/button_add_to_my_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:onClick="addToMyMap"
                android:text="Add to my map" />

            <!--            <Button-->
            <!--                android:id="@+id/button_sign_in"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:onClick="signIn"-->
            <!--                android:text="Sign In" />-->

            <Button
                android:id="@+id/button_add_to_global_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addToGlobalMap"
                android:visibility="gone"
                android:text="Add to global and my map" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_title_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/artist"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_artist_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/genre"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_genre_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_albumArtURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/album_art_url"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_albumArtURL_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/lyrics"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_lyrics_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>